add tenant update and default tenant working hours based on timezone
