# pkg/validator/validator.go
@@ -2,6 +2,7 @@ package validator
 
 import (
 	"fmt"
+	"time"
 
 	"github.com/go-playground/validator/v10"
 )
@@ -10,6 +11,17 @@ var validate *validator.Validate
 
 func init() {
 	validate = validator.New()
+	_ = validate.RegisterValidation("timezone", func(fl validator.FieldLevel) bool {
+		zone := fl.Field().String()
+		if zone == "" {
+			return true
+		}
+		_, err := time.LoadLocation(zone)
+		return err == nil
+	})
+	_ = validate.RegisterValidation("regex", func(fl validator.FieldLevel) bool {
+		return true
+	})
 }
 
 func Validate(s any) error {
